added numpy library

--- a/TestFile_Integrat_JupyterToGithub.ipynb
+++ b/TestFile_Integrat_JupyterToGithub.ipynb
@@ -2,12 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 5,
    "id": "0cc6bb66-e4cb-4161-be93-703fe0d9eadf",
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd"
+    "import pandas as pd\n",
+    "import numpy as np"
    ]
   },
   {
